[tool.poetry]
name = "ipy_pdcache"
version = "0.0.6"
description = "Automatically cache results of intensive computations in IPython."

authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/kpj/ipy_pdcache"


[tool.poetry.dependencies]
python = ">=3.6"
pandas = "^1.0.0"
ipython = "^7.0"


[tool.poetry.dev-dependencies]
pytest = "^6.0.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
