[tool.poetry]
name = "ipy_pdcache"
version = "0.1.0"
description = "Automatically cache results of intensive computations in IPython."

authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/kpj/ipy_pdcache"


[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.2"
ipython = "^7.26.0"


[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^21.7b0"
pytest = "^6.2.4"
pytest-markdown = "^1.0.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
