[tool.poetry]
name = "ipy_pdcache"
version = "0.1.1"
description = "Automatically cache results of intensive computations in IPython."

authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/kpj/ipy_pdcache"


[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.0,<3.0"
ipython = "^8.16"


[poetry.group.dev.dependencies]
bump2version = "^2.2"
black = "^24.3"
pytest = "^7.4"
pytest-markdown = "^1.0"


[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"
